# basic_robotics

./: README.md
2week/: theory.md
4week/: CMakeLists.txt  assignment1.c  assignment2.c  review1.c  review2.c  review3.c  review4.c
5week/: Potentiometer.md  assignment1.ino  assignment2.ino  led_Potentiometer.md  led_switch.md
6week/: buzzer.md  review1.ino  review2.ino  sound_sensor.md  tilt_sensor.md  water_level_sensor.md
final_project/: final_code.ino  sound_sensor.ino
